--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,34 @@
+#progress-bar {
+  height: 5px;
+  padding: 0px;
+  margin-bottom: 35px;
+}
+
+#upper-first-panel {
+  height: 22px;
+}
+
+#upper-second-panel {
+  height: 63px;
+}
+
+.info-panel {
+  height: 150px;
+  padding-top: 30px;
+}
+
+#footer {
+  height: 300px;
+}
+
+#log {
+  height: 280px;
+}
+
+#under-footer {
+  height: 25px;
+}
+
 /**
  * My customization for Foundation framework
  */
@@ -8,8 +39,5 @@
 
 .progress-custom {
   background-color: #f6f6f6;
-  height: 0.25rem;
   border: none;
-  padding: 0.025rem;
-  margin-bottom: 1rem;
 }
