Enhance UX: player can see how many an HP he lose per a round

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -40,6 +40,14 @@
  * My customization for Foundation framework
  */
 
+.text-alert {
+  color: #f04124;
+}
+
+.text-primary-ligth {
+  color: #a0d3e8;
+}
+
 .spell-button {
   margin-bottom: 0px;
 }
